# codeweaver-mcp

./: .editorconfig  .gitattributes  .gitignore  .roomodes  .sourcery.yaml  .yamlfmt.yml  AGENT.md  AGENTS.md  ANTI_PATTERNS_REPORT.md  CLAUDE.md  CODE_STYLE.md  CONTRIBUTORS_LICENSE_AGREEMENT.md  DOCUMENTATION_DESIGN.md  DOC_REVIEW.md  IMPLEMENTATION_PLAN.md  INTENT_LAYER_ARCHITECTURE_SPEC.md  INTENT_LAYER_CORRECTED_FINAL_PLAN.md  INTENT_LAYER_CORRECTED_IMPLEMENTATION_DIAGRAM.md  INTENT_LAYER_CORRECTED_UNIFIED_SPEC.md  INTENT_LAYER_DESIGN_VALIDATION.md  INTENT_LAYER_PHASE_1_ESSENTIAL_FEATURES.md  INTENT_LAYER_PHASE_2_ENHANCED_FEATURES.md  INTENT_LAYER_PHASE_2_ENHANCED_FEATURES_CORRECTED.md  INTENT_LAYER_PHASE_2_ENHANCED_FEATURES_UPDATED.md  INTENT_LAYER_PHASE_3_ADVANCED_FEATURES.md  README.md  REUSE.toml  SERVICES_INTEGRATION_REPORT.md  SERVICES_MANAGER_INTEGRATION_SPECIFICATION.md  SIMPLIFIED_ARCHITECTURE.md  TESTING.md  TODO.md  _typos.toml  consistency_checking.md  context7.json  coverage.xml  example_usage.py  hk.pkl  improvements.md  mise.toml  (+12 more)
.changeset/: README.md  config.json.license
.claude/commands/: api-research.md
.github/chatmodes/: context_architect.chatmode.md  docwriter.chatmode.md
.github/workflows/: ci.yml  claude.yml  copilot-setup-steps.yml  docs.yml  release.yml
Refactoring_Plan/: PROJECT_PLAN.md  phase_2_completion_summary.md
Refactoring_Plan/phase_1_docs/: CONFIG_EXTENSION_SUMMARY.md  MIGRATION_GUIDE.md  PROVIDER_SYSTEM_IMPLEMENTATION.md
_scrapped/: filtering.py  telemetry.py
config-examples/: MIGRATION_GUIDE.md  comprehensive-config.toml  enterprise-multi-source.toml  local-development.toml  production-cloud.toml
context/apis/: ast-grep-py.md  cyclopts.md  fastmcp.md  nlp-fallback-options.md  pydantic-ai.md  pydantic-graph-and-evals.md  pydantic-settings.md  qdrant-client.md  rignore.md  tiktoken.md  tomli-w.md  voyage-ai.md  watchfiles.md
context/mcp-server/: fastmcp.md
docs/: .nav.yml  DEVELOPMENT_PATTERNS.md  FACTORY_SYSTEM.md  MIGRATION_GUIDE.md  SERVICES_LAYER_GUIDE.md  content-strategy.md  index.md  material-theme-config.md  plugin-recommendations.md  site.webmanifest  telemetry.md  why-codeweaver.md
docs/analytics/: data-driven-improvements.md  index.md  privacy-compliance.md  telemetry-system.md  user-feedback.md
docs/api/: __init__.md  config.md  index.md  main.md  server.md
docs/architecture/: index.md
docs/archive/: SERVICES_LAYER_GUIDE.md  content-strategy.md  material-theme-config.md  plugin-recommendations.md  process-intent.md  why-codeweaver.md
docs/assets/: extra.css  format_blocks.js  sort_tables.js
docs/community/: code-review.md  contributing.md  development-workflow.md  development_patterns.md  extension-guidelines.md  index.md
docs/configuration/: advanced.md  backends.md  environment.md  index.md  profiles.md  providers.md  services.md
docs/enterprise/: deployment-patterns.md  index.md  monitoring.md  scalability.md  security.md  troubleshooting.md
docs/extension-development/: backends.md  index.md  monitoring.md  performance.md  providers.md  services.md  sources.md  testing.md
docs/getting-started/: configuration.md  installation.md  quick-start.md  telemetry.md  troubleshooting.md
docs/intent-guide/: index.md  patterns.md
docs/intent-layer/: api-reference.md  architecture.md  configuration.md  custom-strategies.md  examples.md  index.md
docs/migration/: traditional-to-intent.md
docs/reference/: error-codes.md  language-support.md  performance-benchmarks.md  protocols.md  provider-comparison.md  usage-patterns.md
docs/services/: index.md  monitoring.md
docs/user-guide/: claude-desktop.md  how-it-works.md  performance.md  workflows.md
examples/: __init__.py  backend_examples.py  server_factory_example.py  testing_framework_demo.py  validation_demo.py
examples/migration/: __init__.py  providers_migration.py  sources_migration.py
grammars/c/: parser.c
grammars/csharp/: grammar.json
grammars/css/: grammar.json  node-types.json  parser.c
grammars/elixir/: grammar.json  node-types.json
grammars/go/: grammar.json  parser.c
grammars/html/: parser.c
grammars/java/: parser.c
grammars/javascript/: parser.c
grammars/kotlin/: grammar.json  node-types.json
grammars/lua/: parser.c
grammars/nix/: parser.c
grammars/python/: parser.c
grammars/scala/: grammar.json  node-types.json
grammars/solidity/: parser.c
grammars/yaml/: parser.c
overrides/: main.html
plans/: ANALYSIS_SUMMARY.md  ANTI_PATTERNS_REPORT.md  API_DESIGN_SPEC.md  ARCHITECTURE_SPEC.md  BLOCKING_ISSUES.md  CODE_STYLE_ANALYSIS_REPORT.md  DEPENDENCY_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  INTENT_LAYER_ARCHITECTURE_DIAGRAM.md  INTENT_LAYER_ARCHITECTURE_SPEC.md  INTENT_LAYER_CORRECTED_FINAL_PLAN.md  INTENT_LAYER_CORRECTED_IMPLEMENTATION_DIAGRAM.md  INTENT_LAYER_CORRECTED_UNIFIED_SPEC.md  INTENT_LAYER_CRITICAL_ANALYSIS.md  INTENT_LAYER_DESIGN_VALIDATION.md  INTENT_LAYER_FINAL_PLAN.md  INTENT_LAYER_IMPLEMENTATION_DIAGRAM.md  INTENT_LAYER_PHASE_1_ESSENTIAL_FEATURES.md  INTENT_LAYER_PHASE_2_ENHANCED_FEATURES_CORRECTED.md  INTENT_LAYER_PHASE_3_REVISED_PLAN.md  INTENT_LAYER_UNIFIED_SPEC.md  PHASE_1_IMPLEMENTATION_PLAN.md  decision_points.md  planning principles.md
scripts/: README.md  add_plaintext_to_codeblock.py  apply_test_marks.py  check_imports.py  consistency_analysis.py  corrected_improvement_plan.py  f_string_converter.py  fetch_grammars.py  final_consistency_summary.md  fix-ruff-patterns.sh  focused_consistency_fixes.py  gen_ref_pages.py  get-langs.sh  get_all_exceptions.py  get_grammars.py  gramfetch.py  install-mise.sh  punctuation_cleaner.py  refined_consistency_analysis.py  ruff_fixer.py  test_fix_patterns.py  try_return_fixer.py  update-licenses.py  validate_factory_signatures.py
tests/: README.md  __init__.py  test_factory_validation.py  test_integration_backward_compatibility.py
validation/: test_config_system.py  test_provider_system.py  validate_architecture.py  validate_backend_refactoring.py  validate_backend_structure.py  validate_integration.py  validation_demo.py
(+852 files in other folders)
