# SPDX-FileCopyrightText: 2025 Knitli Inc.
# SPDX-FileContributor: Adam Poulemanos <adam@knit.li>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[project]
authors = [
    { name = "Knitli Inc." },
    { name = "Adam Poulemanos", email = "adam@knit.li" },
]
name = "codeweaver-mcp"
license = { text = "MIT OR Apache-2.0" }

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "aenum>=3.1.16",
    "ast-grep-py>=0.39.1",
    "cyclopts>=3.22.5",
    "httpx>=0.28.1",
    "fastmcp>=2.10.6",
    "langchain-text-splitters>=0.3.9",
    "mcp>=1.13.0",
    "numpy>=2.3.0",
    "posthog>=6.3.0",
    "pydantic-ai>=0.6.2",
    "pydantic-graph>=0.6.2",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "qdrant-client>=1.15.0",
    "rich>=14.0.0",
    "rignore>=0.6.4",
    "tiktoken>=0.1.0",
    "tomli-w>=1.2.0",
    "typing_extensions>=4.14.1",
    "uvicorn[standard]>=0.35.0",
    "voyageai>=0.3.4",
    "watchfiles>=1.1.0",
]
dynamic = ["version"]
description = "Extensible MCP server for semantic code search with plugin architecture supporting multiple embedding providers, vector databases, and data sources."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
keywords = [
    "ai",
    "artificial intelligence",
    "ast-grep",
    "claude",
    "code analysis",
    "code embeddings",
    "code indexing",
    "code intelligence",
    "code search",
    "code understanding",
    "codebase analysis",
    "codebase management",
    "codebase",
    "cohere",
    "docarray",
    "extensible",
    "fastmcp",
    "framework",
    "huggingface",
    "large language models",
    "llms",
    "mcp protocol",
    "mcp server",
    "mcp",
    "model context protocol",
    "natural language processing",
    "nlp",
    "openai",
    "platform",
    "plugin architecture",
    "pydantic",
    "pydantic-ai",
    "qdrant",
    "search",
    "semantic search",
    "vector search",
    "voyageai",
]


[project.scripts]
codeweaver = "codeweaver.cli.app:main"

[project.urls]
Changelog = "https://github.com/knitli/codeweaver-mcp/blob/main/CHANGELOG.md"
Documentation = "https://dev.knitli.com/codeweaver"
Homepage = "https://dev.knitli.com"
Issues = "https://github.com/knitli/codeweaver-mcp/issues"
Repository = "https://github.com/knitli/codeweaver-mcp"

[build-system]
requires = ["hatchling>=1.14.1", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[dependency-groups]
build = ["hatchling>=1.14.1", "uv-dynamic-versioning>=0.7.0"]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "httpx>=0.28.1",
    "pytest-env>=1.1.5",
    "pytest-flakefinder>=1.1.0",
    "pytest-httpx>=0.35.0",
    "pytest-report>=0.2.1",
    "pytest-timeout>=2.4.0",
    "dirty-equals>=0.9.0",
    "pdbpp>=0.11.7",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-material>=9.6.15",
    "mkdocs-redirects>=1.0.0",
    "mkdocstrings[python]>=0.30.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-rss-plugin==1.17.3",
    "mkdocs-awesome-nav>=3.1.2",
    "pymdown-extensions>=10.16.1",
    "pygments>=2.19.1",
]
dev = [
    "fastembed-vectorstore>=0.2.0",
    "ruff>=0.12.4",
    "superclaude>=3.0.0.2",
    "uv>=0.8.2,<0.9.0",
    "ipython>=9.4.0",
    "jsonlines>=4.0.0",
    "copychat>=0.7.2",
    "pdbpp>=0.11.7",
    "pyperclip>=1.9.0",
    "pydantic-ai>=0.6.2",
    "fastembed-vectorstore>=0.2.0",
    "basedpyright>=1.31.3",
]

[project.optional-dependencies]

recommended = [
    "aenum>=3.1.16",
    "ast-grep-py>=0.39.1",
    "cyclopts>=3.22.5",
    "fastmcp>=2.10.6",
    "langchain-text-splitters>=0.3.9",
    "mcp>=1.13.0",
    "numpy>=2.3.0",
    "posthog>=6.3.0",
    "pydantic-ai>=0.6.2",
    "pydantic-graph>=0.6.2",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "qdrant-client>=1.15.0",
    "rich>=14.0.0",
    "rignore>=0.6.4",
    "tomli-w>=1.2.0",
    "tiktoken>=0.1.0",
    "tokenizers>=0.21.4",
    "typing_extensions>=4.14.1",
    "uvicorn[standard]>=0.35.0",
    "voyageai>=0.3.4",
    "watchfiles>=1.1.0",
]

recommended-no-telemetry = [
    "aenum>=3.1.16",
    "ast-grep-py>=0.39.1",
    "cyclopts>=3.22.5",
    "fastmcp>=2.10.6",
    "langchain-text-splitters>=0.3.9",
    "mcp>=1.13.0",
    "numpy>=2.3.0",
    "posthog>=6.3.0",
    "pydantic-ai>=0.6.2",
    "pydantic-graph>=0.6.2",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "qdrant-client>=1.15.0",
    "rich>=14.0.0",
    "rignore>=0.6.4",
    "tiktoken>=0.1.0",
    "tomli-w>=1.2.0",
    "tokenizers>=0.21.4",
    "typing-extensions>=4.14.1",
    "uvicorn[standard]>=0.35.0",
    "voyageai>=0.3.4",
    "watchfiles>=1.1.0",
]

recommended-local-only = [
    "aenum>=3.1.16",
    "fastembed>=0.7.1",
    "transformers>=4.55.2",
    "ast-grep-py>=0.39.1",
    "cyclopts>=3.22.5",
    "fastmcp>=2.10.6",
    "langchain-text-splitters>=0.3.9",
    "mcp>=1.13.0",
    "numpy>=2.3.0",
    "posthog>=6.3.0",
    "pydantic-graph>=0.6.2",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "qdrant-client>=1.15.0",
    "rich>=14.0.0",
    "rignore>=0.6.4",
    "tiktoken>=0.1.0",
    "tomli-w>=1.2.0",
    "typing-extensions>=4.14.1",
    "uvicorn[standard]>=0.35.0",
    "watchfiles>=1.1.0",
]

# Absolute bare minimum to run CodeWeaver
# This is the minimum set of dependencies required to run CodeWeaver without any additional features or providers. No CLI, no telemetry, no advanced features.
# Uses `fastembed-vectorstore` for vector in-memory and json-based simple storage, and for local embedding generation.
minimal = [
    "aenum>=3.1.16",
    "ast-grep-py>=0.39.1",
    "fastmcp>=2.10.6",
    "langchain-text-splitters>=0.3.9",
    "mcp>=1.13.0",
    "numpy>=2.3.0",
    "pydantic-settings>=2.10.1",
    "pydantic-ai-slim[openai]>=0.6.2", # really any pydantic-ai-slim, this just gives a lot of providers for one dependency
    "pydantic-graph>=0.6.2",
    "pydantic>=2.11.7",
    "fastembed-vectorstore>=0.2.0",    # assuming you want something light weight here.. if not, you can pick and choose from below
    "rignore>=0.6.4",
    "typing-extensions>=4.14.1",
    "uvicorn[standard]>=0.35.0",
]

# =================  A-La-Carte =================
# Pick and choose what you want. You need:
# 1. The `required-core` dependencies
# 2. At least one provider for embedding generation (e.g. `provider-openai`)
#      - If that provider is `provider-fastembed` or `provider-voyage` you also need to include
#         any provider that uses pydantic-ai, like `provider-huggingface` or `provider-openai` or `provider-anthropic`
# 3. At least one vector store provider (e.g. `provider-qdrant`)
# **strongly recommended:**
#    - `provider-filesystem` -- without it, you'll need to manually initiate indexing and handle file changes yourself
#    - One agent-capable provider (e.g. `provider-openai`)
#        We use agents to significantly improve results when you give us the necessary information (model, API key, installed client)
#        We can do that without it, but we *can't do it outside of an MCP request*, such as for our `precontext` feature
# Example install:
#    `uv pip install 'codeweaver-mcp[required-core,provider-openai,provider-qdrant,source-filesystem]'`
#    `uv pip install 'codeweaver-mcp[required-core,pre-context,provider-anthropic,provider-voyage,provider-qdrant]'`
required-core = [
    "aenum>=3.1.16",
    "ast-grep-py>=0.39.1",
    "fastmcp>=2.10.6",
    "mcp>=1.13.0",
    "numpy>=2.3.0",
    "pydantic-settings>=2.10.1",
    "pydantic-graph>=0.6.2",
    "pydantic>=2.11.7",
    "rignore>=0.6.4",
    "typing-extensions>=4.14.1",
    "tiktoken>=0.1.0",
    "uvicorn[standard]>=0.35.0",
]

cli = ["cyclopts>=3.22.5", "rich>=14.0.0", "tomli-w>=1.2.0"]

# also requires one agent-capable provider, one embedding-capable provider, and a vector store
pre-context = [
    "cyclopts>=3.22.5",
    "rich>=14.0.0",
    "tomli-w>=1.2.0",
    "watchfiles>=1.1.0",
]

# ==== Providers ====
#    --- Agent-only Providers --- (no embedding/rerank)
provider-anthropic = ["pydantic-ai-slim[anthropic]>=0.6.2"]
provider-groq = ["pydantic-ai-slim[groq]>=0.6.2"]

#    --- Embedding and Agent Providers --- (no rerank)
provider-google = ["pydantic-ai-slim[google]>=0.6.2"]
provider-openai = ["pydantic-ai-slim[openai]>=0.6.2"]
# OpenAI includes support for:
#   DeekSeek, Ollama, OpenRouter, Vercel, Perplexity, Moonshot, FireworksAI, 
#   TogetherAI, Azure AI Foundry, Heroku, and Github Models, X-AI
# which all use the OpenAI API
provider-mistral = ["pydantic-ai-slim[mistral]>=0.6.2"]

#    --- Embedding, Rerank and Agent Providers --- (the trifecta)
provider-huggingface = ["pydantic-ai-slim[huggingface]>=0.6.2"]
provider-bedrock = ["pydantic-ai-slim[bedrock]>=0.6.2"]
provider-cohere = ["pydantic-ai-slim[cohere]>=0.6.2"]

#    --- Embedding and Rerank Only --- (no agent)
provider-voyageai = ["voyageai>=0.3.4"]
provider-fastembed = ["fastembed>=0.7.1", "transformers>=4.55.2"]
provider-fastembed-gpu = ["fastembed-gpu>=0.7.1", "transformers>=4.55.2"]
# Requires additional setup, see https://qdrant.github.io/fastembed/examples/FastEmbed_GPU/

# ==== Vector Stores ====
provider-in-memory = ["fastembed-vectorstore>=0.1.6", "transformers>=4.55.2"]
provider-in-memory-gpu = [
    "fastembed-vectorstore>=0.1.6",
    "transformers>=4.55.2",
    "fastembed-gpu>=0.7.1",
]
provider-qdrant = ["qdrant-client>=1.15.0"]

# ==== Data Sources ====

source-filesystem = ["watchfiles>=1.1.0"]
source-tavily = ["pydantic-ai-slim[tavily]>=0.6.2"]
source-duckduckgo = ["pydantic-ai-slim[duckduckgo]>=0.6.2"]


# ==== Authentication and Authorization Middleware ====
# Optional middleware to add authentication and authorization capabilities to the CodeWeaver server.
# This allows you to secure your CodeWeaver instance with various authentication providers and authorization policies.
# The middleware can be used to enforce access control policies, authenticate users, and manage permissions.

# TODO: Implement authentication and authorization middleware -- should be simple to add
# permit.io middleware - see https://gofastmcp.com/integrations/permit
auth-permitio = ["permit-fastmcp>=0.1.1"]

# eunomia middleware - see https://gofastmcp.com/integrations/eunomia-authorization
auth-eunomia = ["eunomia-mcp>=0.3.9"]

# workos AuthKit middleware - see https://gofastmcp.com/integrations/authkit
# No additional dependencies required, it's purely REST-based.
# Enable with environment variables:
#  ## Instruct FastMCP to use the AuthKit provider:
#    FASTMCP_SERVER_AUTH=AUTHKIT

#     configure the AuthKit provider
#     FASTMCP_SERVER_AUTH_AUTHKITPROVIDER_AUTHKIT_DOMAIN="https://your-project-12345.authkit.app"
#     FASTMCP_SERVER_AUTH_AUTHKITPROVIDER_BASE_URL="http://localhost:8000"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"
bump = true
fallback-version = "0.0.0"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
artifacts = ["*.so", "src/**"]
packages = ["src/codeweaver"]

[tool.hatch.build.targets.sdist]
include = [
    "src/**",
    "pyproject.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-MIT",
    "LICENSE-APACHE-2.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=codeweaver",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    # Test categories
    "unit: Unit tests that test individual components in isolation",
    "integration: Integration tests that test component interactions",
    "validation: Validation tests that ensure system consistency",
    "e2e: End-to-end tests that test complete workflows",

    # Performance & benchmarks
    "benchmark: Performance benchmark tests",
    "slow: Tests that take a significant amount of time to run",
    "performance: Performance-related tests",

    # External dependencies
    "network: Tests that require network access",
    "external_api: Tests that interact with external APIs",
    "voyageai: Tests that require VoyageAI API access",
    "qdrant: Tests that require Qdrant vector database",

    # Configuration & environment
    "config: Configuration-related tests",
    "env_vars: Tests that depend on environment variables",
    "mock_only: Tests that only use mocked dependencies",

    # Feature-specific
    "embeddings: Tests related to embedding functionality",
    "search: Tests related to search functionality",
    "indexing: Tests related to code indexing",
    "telemetry: Tests related to telemetry and metrics",
    "mcp: Tests related to MCP protocol functionality",
    "services: Tests related to services layer",

    # Test types
    "parametrize: Parametrized tests with multiple test cases",
    "fixtures: Tests that heavily rely on pytest fixtures",
    "async_test: Asynchronous tests (in addition to pytest.mark.asyncio)",

    # Stability & reliability
    "flaky: Tests that may occasionally fail due to timing or external factors",
    "timeout: Tests with specific timeout requirements",
    "retry: Tests that may need retries",

    # Development & debugging
    "debug: Tests for debugging purposes",
    "dev_only: Tests that should only run in development",
    "skip_ci: Tests to skip in CI/CD environments",
]
asyncio_mode = "auto"
timeout = 300
timeout_method = "thread"

[tool.pyright]
strict = ["src/codeweaver/**/*.py"]
include = ["src/codeweaver/**/*.py", "tests/**/*.py", "scripts/**/*.py"]
exclude = [
    "src/codeweaver/parsers/**/*.py",
    ".venv/**",
    "dist/**",
    "build/**",
    "docs/**",
    "tests/data/**",
    "typings/**",
]
autoImportCompletions = true
deprecateTypingAliases = true
pythonPlatform = "Linux"
pythonVersion = "3.12"
reportCallnDefaultInitializer = "information"
reportImplicitStringConcatenation = "error"
reportImportCycles = "warning"
reportPrivateImportUsage = "none"
reportPrivateUsage = "none" # It's our own internal use...
reportPropertyTypeMismatch = "error"
reportShadowedImports = "error"
reportUninitializedInstanceVariable = "information"
reportUnusedCallResult = "information"
strictDictionaryInference = true
strictListInference = true
strictParameterNoneValue = true
strictSetInference = true
venvPath = ".venv"
# we use standard for internal scripts and tooling,
# the `strict` parameter above sets strict for the main codebase
typeCheckingMode = "standard"
